--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -4,8 +4,21 @@
     padding: 0;
     box-sizing: border-box;
 }
+body {
+    font-family: sans-serif;
+}
+#main{
+    margin: 50px 40px;
+}
+
+.center{
+    display: flex;
+    justify-content: center;
+}
+
 
 .grille{
+    float: right;
     width: var(--tailleGrille);
     height: var(--tailleGrille);
     display: flex;
@@ -15,6 +28,108 @@
 .case{
     width: var(--tailleCase);
     height: var(--tailleCase);
+    margin: var(--tailleMargin);
     border-radius: 50%;
-    
+    border: 1px black solid;
+}
+
+#button-container {
+    display: flex;
+    align-items: center;
+    float: left;
+    width: 200px;
+    height: var(--tailleGrille);
+
+}
+#buttons {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    max-height: var(--tailleGrille);
+}
+#blanc{
+    border: 1px black solid;
+}
+.button {
+    margin: 10px 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    height: 40px;
+    width: 90px;
+    cursor: pointer;
+}
+#add-color-button {
+    border: 1px solid black;
+}
+.button.active {
+    transform: scale(1.1);
+}
+
+.fw {
+    color: white;
+}
+
+#addColorForm {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgba(50, 50, 50, 0.8);
+    padding: 20px;
+    color: white;
+    font-size: 1.4rem;
+    height: 300px;
+    border-radius: 10px;
+}
+#addColorForm.active {
+    display: flex;
+}
+#addColorForm form {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-size: 1.2rem;
+    justify-content: space-between;
+}
+#addColorForm form input[type="text"] {
+    margin-top: 10px;
+    width: 200px;
+    padding: 5px;
+    outline: none;
+}
+#addColorForm form input[type="submit"] {
+    background: none;
+    outline: none;
+    color: white;
+    border: 2px solid black;
+    border-radius: 8px;
+    padding: 5px;
+    cursor: pointer;
+    transition: .3s;
+}
+
+#color-preview {
+    height: 30px;
+    width: 150px;
+    background-color: rgb(var(--red), var(--green), var(--blue));
+}
+#addColorForm form input[type="submit"]:hover {
+    color: white;
+    background-color: black;
+}
+#addColorForm form input[type='range']#red {
+    accent-color: red;
+}
+#addColorForm form input[type='range']#green {
+    accent-color: green;
+}
+#addColorForm form input[type='range']#blue {
+    accent-color: blue;
 }
